--- a/styles/etude.css
+++ b/styles/etude.css
@@ -16,3 +16,9 @@
     height: 500px;
     width: auto;
 }
+
+h2 {
+    background-color: var(--couleur-0);
+    color: white;
+    text-align: center;
+}
